# CJOPROO

./: .gitignore  Projeto Final - Jogo C++ - Lar Doce Lar.docx  compilar.bat
GerenciamentoTarefasAcademicas - QtCreator/tarefasAcademicas/: CMakeLists.txt  main.cpp
GerenciamentoTarefasAcademicas - QtCreator/tarefasAcademicas/src/: main.cpp  mainwindow.cpp  mainwindow.h  task.cpp  task.h  taskfilerepository.cpp  taskfilerepository.h  taskmanager.cpp  taskmanager.h
include/: Casa.hpp  Entidade.hpp  Item.hpp  Jogador.hpp  Mundo.hpp  TexturasJogo.hpp  Utilidades.hpp  Zumbi.hpp
src/: Casa.cpp  Entidade.cpp  Item.cpp  Jogador.cpp  Mundo.cpp  Zumbi.cpp  main.cpp
